Correction of a problem with images on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -520,7 +520,7 @@ button.border:hover {
         border: 0 solid transparent;
     }
 
-    .gallery a img {
+    .gallery a img, .gallery a {
         width: 80%;
     }
 }
